--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -17,7 +17,7 @@ resources:
   - ./k8s-at-home.yaml
   - ./k8s-gateway.yaml
   - ./kubernetes-dashboard.yaml
-  # - ./longhorn.yaml
+  - ./longhorn.yaml
   - ./metallb.yaml
   - ./metrics-server.yaml
   - ./node-feature-discovery.yaml
