--- a/kubernetes/apps/longhorn-system/longhorn-system/helmrelease.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn-system/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
       enabled: true
       ingressClassName: traefik
       annotations:
-        kubernetes.io/ingress.class: traefik
+        #kubernetes.io/ingress.class: traefik
         cert-manager.io/cluster-issuer: "letsencrypt-production"
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
