--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -4,9 +4,9 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./echo-server/ks.yaml
-  # - ./hajimari/ks.yaml
-  # - ./weave-gitops/ks.yaml
-  # - ./whoami/ks.yaml
-  # - ./filebrowser/ks.yaml
-  # - ./nginx/ks.yaml
+  - ./hajimari/ks.yaml
+  - ./weave-gitops/ks.yaml
+  - ./whoami/ks.yaml
+  - ./filebrowser/ks.yaml
+  - ./nginx/ks.yaml
 #  - ./plex/ks.yaml
