--- a/kubernetes/apps/longhorn-system/longhorn-system/helmrelease.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn-system/helmrelease.yaml
@@ -33,26 +33,26 @@ spec:
       defaultReplicaCount: 2
       defaultLonghornStaticStorageClass: longhorn
 
-    ingress:
-      enabled: true
-      ingressClassName: traefik
-      annotations:
-        #kubernetes.io/ingress.class: traefik
-        cert-manager.io/cluster-issuer: "letsencrypt-production"
-        traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-        traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
-        hajimari.io/enable: "true"
-        hajimari.io/icon: cow
-        hajimari.io/group: storage
-        hajimari.io/appName: longhorn
-      hosts:
-        - "longhorn.${SECRET_DOMAIN}"
-      path: /
-      pathType: Prefix
-      tls:
-        - hosts:
-            - "longhorn.${SECRET_DOMAIN}"
-          secretName: "longhorn.${SECRET_DOMAIN}"
+    # ingress:
+    #   enabled: true
+    #   ingressClassName: traefik
+    #   annotations:
+    #     #kubernetes.io/ingress.class: traefik
+    #     cert-manager.io/cluster-issuer: "letsencrypt-production"
+    #     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    #     traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
+    #     hajimari.io/enable: "true"
+    #     hajimari.io/icon: cow
+    #     hajimari.io/group: storage
+    #     hajimari.io/appName: longhorn
+    #   hosts:
+    #     - "longhorn.${SECRET_DOMAIN}"
+    #   path: /
+    #   pathType: Prefix
+    #   tls:
+    #     - hosts:
+    #         - "longhorn.${SECRET_DOMAIN}"
+    #       secretName: "longhorn.${SECRET_DOMAIN}"
 
     # ingress:
     #   enabled: true
