--- a/kubernetes/apps/longhorn-system/longhorn-system/helmrelease.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn-system/helmrelease.yaml
@@ -18,6 +18,7 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    enablePSP: false
     persistence:
       defaultClass: false
       defaultClassReplicaCount: 2
