--- a/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
@@ -60,6 +60,14 @@ spec:
         storageClass: longhorn
         labels:
           snapshot.home.arpa/enabled: "true"
+    # volumeClaimTemplates:
+    #   - name: config
+    #     mountPath: /config
+    #     accessMode: ReadWriteOnce
+    #     size: 1Gi
+    #     storageClass: longhorn
+    #     labels:
+    #       snapshot.home.arpa/enabled: "true"
     # volumes:
     #   - name: config
     #     persistentVolumeClaim:
