--- a/kubernetes/apps/media/plex/ks.yaml
+++ b/kubernetes/apps/media/plex/ks.yaml
@@ -12,7 +12,7 @@ spec:
     # - name: cluster-apps-rook-ceph-cluster
     # - name: cluster-apps-volsync
     - name: cluster-apps-intel-device-plugin-gpu
-  path: ./kubernetes/apps/default/plex/app
+  path: ./kubernetes/apps/media/plex/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -21,7 +21,7 @@ spec:
     - apiVersion: batch/v1
       kind: CronJob
       name: plex-off-deck
-      namespace: default
+      namespace: media
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       name: plex
