--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:dD+Wpe6g,iv:4WmsfkRfxYjCwxHq+7y+AWi13ubm1v6KxvxARdz6n8Y=,tag:WPplYmhyztiZWAYho/qNSQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:C/27aa+T,iv:lib9yhjETdWOqEYv5h30tnPOvG99Fv6e9lpzWZNTgzA=,tag:Lj4UHTTwG6/HjZNHeTW8SA==,type:str]
+kind: ENC[AES256_GCM,data:CMoiNN9l,iv:zYe+QjZ8Y05VXyj2GtoC1F8SdVZO+lRHwPw0PB3B0Bs=,tag:oKX0xv9W0UdZjRPx9eGcpw==,type:str]
+ansible_user: ENC[AES256_GCM,data:yrqTvtUF,iv:Xuw1gAUqZQzkf9AmUa1WSp0ox3a3xEwUm9UNMn2EDr4=,tag:aQKW6LgnjIF82bEIfox2GA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0R3JRTnRxM25PT1NEbVJN
-            KzREZG04S2pZWndERjExR2lCYTVaY2tXaG1jCmo0RTFRTnJtYXV1d29KdXJnaE5Z
-            TFVnclc5Z1RZNUlpYXRzNzdvS3l3aEEKLS0tIFdFWWZydm5UWWpRMFhGeGovODkw
-            Zzd1cElqRUF2WGw3d0RmMXlFck9QbncKtQAlLHd+nXUvVcXd4fDnjSED4gtTt7+X
-            e2dW6Y9eUoPXzq7IyINa/p7gYaSjNvs3SS0lfs5C4FdRmqkB1tXRPw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLV3VySFNhbDNiRThrWEJH
+            cE9GQ0dqblA2Wk1vWnhFdmxnUGFiYUF0NWs4CmpvWTIrdkRjRVVkU1Z6b09Kdkhm
+            Uy9rVXQ1REk1S09FbUtKODEyNjU4MGcKLS0tIE9hV0gxcDc2ZGNJc2ZsTnJ6dW1u
+            MThKeFRIekEyYkU1aWFQdHd3cEhIZWcKw6QdMkNLj/SlzC35PkMoFmcKRrA3Pv5r
+            a5L+GfRUhxWdP/v8opL9HlY+EWXMuOZL78piqrgJA6bb/3m0q2RDWw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T04:58:33Z"
-    mac: ENC[AES256_GCM,data:ojzxhKj/3f1a5zciYcxNqK22ju2E4D1BmrUrACrtdruJWsazV6L1gOaDbUZ4GHfvPrJTQf4JEPKq0c3/V5CzJ20NsMALty04kWFEQRaLHvxeGnxYAS3YYgiX0b+xId/eM9l39xqQMpQPScD5LG+a2VoFJAd8MbNK0IFkAbeEq1U=,iv:HEGdiEe22VxjjitwE4aF9gJLA0Vt1E3C/mF7iGL2mJ8=,tag:sJ8P2M1W2fKjnj+fEj+pPQ==,type:str]
+    lastmodified: "2023-01-29T05:12:41Z"
+    mac: ENC[AES256_GCM,data:+0R+1XaLa5RV6k9cPTuVqKnXcg3UCEfDWt1Oy3e95jzbixMN6wjav9MSCWH5BPWXIGHzi4eilY2qrrXJuFSEkgssw+1yJqWVAVwHuFdNbvGCkP0jo5SiGE7f+CHviotPbY0sswQFEKCAihPvFjNcpDPObGJyhOuP5E9JiT1WUDM=,iv:HTt1bl/qO6j9K/CQS3eKMgSjytdnboqZaAT1RE5+lJs=,tag:hFmQySuxDsSrxXKiJMVwbQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
