--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:x3CcmEdN,iv:GjRaYahXcaae82oIGTViVGjiMfQB4GLdz9L5RbfXncY=,tag:yoWQj7Va303dVAjPfscWBw==,type:str]
-ansible_user: ENC[AES256_GCM,data:2mLFQlvq,iv:7rnr77Qtuy9JaSUraqbi6Hz4F4uXI1iN6jw0s8y+chk=,tag:bTWcPomUYmtiHqhNjk+q1Q==,type:str]
+kind: ENC[AES256_GCM,data:mdG5qzI8,iv:B7tW/2/D5un77byQCFuZX4KUAYeOXxBFRmnF5KFlkLg=,tag:nZzhSx1Qon+5mvIojcYngg==,type:str]
+ansible_user: ENC[AES256_GCM,data:NXt746Im,iv:7q8V+5Yt9zmjzC2/W8ERgEl/t0eqt4508dkRXoO0XSA=,tag:76FUYpJbSbwzLWzHSFZWNg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpMzVzYkxOVXg3WkczTW90
-            dGhvaGQ4RjlLeEN0RlU2T1RCbjQrNVVvU0ZZCnBZbEF1UCtRVnhFQndud2VnZHR4
-            Zzh0cXVXamNtTkxFbWkzSUk0dGtNT0UKLS0tIFN3WFFpeEQybEpjd0hNN2JkVWMx
-            aE95UVc1M0ZCaTRlbDZ4a1F6Rmo5d1EKPpp3Qtm5/ld1Li5mgu7GfFt1DsANDWrV
-            xvnol2z4xDovWOJX30DJD/oBrF1vpJ5XxO0u7Zem8g5qUkHCkRqg4w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0ZmJYQzFKdHZrK1BBZTRX
+            NVVPTjduRklsNWY5bnorNWtTYkp4cmlLWUU4CnpYU3MwMFdBUThkSVRHVis4MUg2
+            M1V3Sk92T0p1Ly8vd2QxdnYyY0grQ0UKLS0tIE9vTXdtTE16QmNDK1lDbVppbGVJ
+            TnV3NlpyRnpia1cvTjl5WTRXSlo2R1kKq8HtmA4+8qLe38P+69I5Nepl4l0O6WVK
+            opQAgt4b2Z//lUgjrViEN5qe64nuyjPEBckyLX1fe/USk7rB3M3fkA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T04:58:33Z"
-    mac: ENC[AES256_GCM,data:A0kbdIkSRNabsDAQHYXqPf0EjSFb6NJ+5TGSK7RVuZ08fO26TTbBT2xF/jNiPWgU4ZumL3Gj/ISAFexeveARuv0iCf6w5puIh/1IuTU0LKdOAZQniWyx8X0XkPIQKR749ni3OAqLxKAK79qW/DAlKcVCDqANdfu4Mnqeva/40lE=,iv:quwX1+kWm19VAwuZ56jzNFOfRTq4Uyq8TzAN/30Kgwo=,tag:SBuQQ+mMfPBIgj7dc+Nvyg==,type:str]
+    lastmodified: "2023-01-29T05:12:41Z"
+    mac: ENC[AES256_GCM,data:mD4OVuRzWa/fMrYJT29OXlvclhAw3akxg2sI9ri2Gd9f7eHkvYJnJ9lJy5dDYpRSbjlbh0t1Bqiu0rarhawnx4LMv7+NfCkWOlsv9mf4dyIO1sjopUc3dTemFajoRPwB0Dg5VcOyVZ7tRiTTd0TEjYXnUo4xXZK6Sl2fT4W7hc8=,iv:JqvfAVWRFwQAJdq842wbbm6Z63v4hUIo6027fJVyTYU=,tag:kKEbJO+a2N8HL2DAe6+53w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
