--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:J5FHe+lv,iv:kSuyj1kdh4lkSv+yQIH3YLcNgQnVopRfm9/gyxWHdNM=,tag:gfmo7fr5TqbLphtmlFUJbQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:gY9I90Vc,iv:63fW8Q3ui7Pg5oYa4wC1V3tTSwVQNavshJ/am57zlBs=,tag:lKa+0+pUguJpYiiDn4GUnA==,type:str]
+kind: ENC[AES256_GCM,data:Xi8tyQ8x,iv:T+aUEVTpusHJRcNTmTKl9HEnUzaxfGBM5MM1Hn1zYYA=,tag:4dbIv+u/njw4xnedM+CO+A==,type:str]
+ansible_user: ENC[AES256_GCM,data:LbZHZysg,iv:eCj+nFmAo+dIilgkKD0qBujTNN2mfy6a2T6AG4EvziE=,tag:7z0Oi+15h+jm+cwu7m1GbA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyVWFXU0ZRV1huR3J3NzJy
-            UjV2cEg3WnN6YjBkb25taFVVSVdnOEJyR0dVClgwelRmdS9mTjE2Zzd0c3RSTUk0
-            V2JvSlJqaFNhSDlVSm9qWGdNWjJoamMKLS0tIHkxbEF6R0tOV1BwcWdKT2RMY0RN
-            dHA2WHB3S09PZGNmYWtJeFgrT0MvOWsK6C1t4DbXE0OXZjlvRKIGkd/x+Dzgin9C
-            9RrIkZgVfepDXsFKhPBuhY+F8qrFMA8NQ/+8V2kKWN0jHCLyKgCxVg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvTEtrOElIdUNwRlVUaDF2
+            a0lRTW91MTUzQk9pZ3NpcElLSkN5UG9td2s0CjVwb3lWWGFHMlVqejFJRXlUTDNy
+            YjJZYnNvaDI3QjNRbUQvMndpaFhsT0kKLS0tIHlwZFFZVzBZNGtFT0RPejU5MVJJ
+            dXJJdzh4Z2U3MDNwQm55eSt6eWQxcncKQVQBikWeypoimlWZK+e0oquI1F25Xs0Z
+            AGcGAzVM0kcTIysO/hgixcx2JKECcLqmuW9vrzh51ynQY+dPXTtvvg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T04:58:33Z"
-    mac: ENC[AES256_GCM,data:KtWkk8neIPEOaf846SuiODDQnIk+DNMzUdlezOSKJ8xgDhXEt/vVpLSQKrHshpPdTLXtFS9bBRNI25MuRDPMIT1XGk2L+7+qFPjEGFsqxYIz0q79QcugDgm0u60Zq1wapR8LqJmia3NEVfrvIt3msbc7sAAzaERhRBFK61DsUkQ=,iv:rNxa8SkJIbb3/kOH20TKMY3b49v/acO1KeI0V1K13LQ=,tag:dP/OI5RqpNYuhAatd1O6LQ==,type:str]
+    lastmodified: "2023-01-29T05:12:41Z"
+    mac: ENC[AES256_GCM,data:DCgqmHMu7Yzv3PreKKHy4x5GelUJNrEEH4mVtMw95pltDAOhsUEXOVtpay8kU1s0KObaik4qRAf9QfBt1EqL26zn1k8/2Sa4WB/XBAVzdNsH62QyTBwL4e+tfJhaQ5pzWYsT8++IYvEsRZMMYGgUsy+Wy+fJH15z3ZAtyd7+W94=,iv:Qv1rr/FVW0+ucxGbshZAySuF9uBjE3X7uBwbfZ5+puk=,tag:Hmcj+VTOvcPXCuSLcjVFdg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
