--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:vbPd8zxC,iv:ehuMRaTxGIIE99NGQ20jpa/aiMQu6V9O00mrwKxTeoE=,tag:05KmGqBHtqYuONY69NjvJg==,type:str]
-ansible_user: ENC[AES256_GCM,data:5G0wcFTL,iv:TAsoTvIrSz1EOBrblzQhvlFKq3GmMnV79gVmccnat8w=,tag:4+AErUBa9tTSPatmbawvFQ==,type:str]
+kind: ENC[AES256_GCM,data:sDKWpAdA,iv:FXhn12J+2T3KWBLhPn8joBNrEJNEKS/R8smwAW4bOhg=,tag:aU4dcc2HSL0WSHeWsTZLBw==,type:str]
+ansible_user: ENC[AES256_GCM,data:5nYbQ9YH,iv:a+0hBq1Lk5JUY6+XQKy2dhfJX7hsGKRiN3U+k++D3aw=,tag:8cV0oaEeSCr11F6Ir+83yA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJRmRRenpTN0w1VEdDUzN0
-            OG5zRm9kbVI4US9hamZhNkRPYW4vSGJaQ3lzClNBNHFsN1ZTc0k4eWxKSEIvaHd6
-            SndYL3JBSUZMZjFLQnozSjB5NWpmbncKLS0tIEo5cXE4VzRCaFdob0ZFTExBaVFF
-            aDlIVVZLNitwY2JPc0FCY3k2ZW9wU0EKKnNSfk3TOUdGn5ehdH6dn9tJb/BG6p3V
-            sqnqKOgXRYB66Xjav+0Pk1qutnHA2vQDq/EEt9uPXtZQGQC9c/lIxQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKbHMreG96eDNwMzc0MUtP
+            QWxvemhjd2tkTVFiNzNJdC9aMjZ0SjFqQngwCkZzaW9KdFRmenc2YmlXdC9aZ2FN
+            ZXpSNVZFbWkwRVdvMzQ0a0NFV0FGa1EKLS0tIDhsNVRReG1CdDZ6eFdOUFhSNlVF
+            RkdSMWFWejkyY1ErTmtBckVJSFpkWEUKcqn1/LnNBmFEKky19qpesG1JgVFCx3ZU
+            Oh7RJt33SWGRtCE7lDNtxx04MmqueQpn0vSpuiclQCQIXv2loX7kxA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T04:58:33Z"
-    mac: ENC[AES256_GCM,data:OdAf4xVtUww4+JFc9g4dURWdqSq0KWYr9lZmpbfnqzaH9Ky2OQ2iX9BGqae87pGRoZTzIxl5iLzAEF8XMdwMgJJVcbK0+8irUMHbk5ITXHLslHyAIZ9Wf1VuDvUXsw3ZedSH0x7+mn7qF+if5wiHuiIEQWLCftTMAVT8NYoSjjU=,iv:OCEd8aBNuH5cqbQMeW8QpVuuy8WcMj22cnOKXsLD4kg=,tag:Sob38xaSanENN2HOECjcHg==,type:str]
+    lastmodified: "2023-01-29T05:12:41Z"
+    mac: ENC[AES256_GCM,data:SKHD+iwEK1MGNPY1rc/rxirS/+HqeqqWk8lshzAz1VHe8AQKjosx48FOWjwkNRWckw3l5/ER/VuNJjWMuiRNf/ICrwEuApQ1/LLZ2jB3rsmc0O02UYwciKQq+fOjuw0U10WafUBU67Gi0iIzZAk5SNaWIpUmsYveo5sdUhCnBWo=,iv:KqkbCVen+ehnaeKjRxu+F6Z7zJvxONO2/6fE0UIA4ug=,tag:XW7RN6DaY229CJ0/lvNNWw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
