--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:/ip9lstk,iv:ctL+Ki2xuvNPsZuuTbkBd4p0DiKBtsey7OTXQQuTLUE=,tag:BuSbLKs6lqAOks8PDkov4g==,type:str]
-ansible_user: ENC[AES256_GCM,data:x0dRVzGt,iv:OM1p+pLxD41M/Vso58vl4EpWjznWFXIRd3/HW4ug7gM=,tag:McoVV93ZRmArSrmQhGUX5g==,type:str]
+kind: ENC[AES256_GCM,data:Vm6YohVh,iv:s+VaLkEAiKEf/hxqo2XhM+mSnoHzrZG3oNsISkRAhcg=,tag:z7WggJt0pDBC9qjndOypKQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:daHFK73D,iv:dFCKRDmnfkf+0xEo7QfX0F6wURKBaxIjqkuVB5acd8k=,tag:QZjtxZ1/QjVX2Ga9VgS63A==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwNHY3RkRqYVRIY0VoTXpz
-            Sm9IZW03SlNCK05BeCtuWkFHdzkvQ2VjR1ZVCnpsbldVWDJtMm1ycGtmS0xyYnpR
-            b0thTm1jNmpCOUpZZzhCOVZFMHhXdTgKLS0tIHJRZjk5Tmdob205Z1RZeEVWN3kv
-            ZWUxZFRiMXVJcVJxaXl4aGUzT3R5UXMK5Yw6X/c9P5XiFM67gRX3lMLfCcpYi7V+
-            OUpESL4u3tMkZjDA24/ipt18g3rgxjKNU1wam5HYNvoMC/Vn8L1i/Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzalppc3FsY0tPMHJ3ejc4
+            dFArM1JwaVovNEE5N0FPcHYvK1NkVk81TVRvCmZ4UDlMSmNzZDZGVkZXWDdKa1Ny
+            cDZoUWpveWdQM244RXJHRjQ2WlY1L1UKLS0tIElUL0NVNC9JNC9TaW51bVhEZE1s
+            TVVFeDAybC9hR1R1amhLWDBKeWVNWjAKezWzODSE1wuxl/n1FRXUTB8CsO1+2Z5A
+            zHWfB8K+qxqg0tjLTF47igdo3o8FQcbzrvzYTxgpUymCuZPY2m6Qig==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T04:58:33Z"
-    mac: ENC[AES256_GCM,data:b5qd9YH1nWgcjFsqhecp/3wz7+8pJZjchCNbnQB0aj+9U1N1CkA+aji7AXQB6Ib0AezApCctM7hyXYsj+YKVdXcF5KteDr22LSuPN9GnzbyvA7fUsgEhM0r9dIIM7S+S3VVHIViRoBTIoQmZGp6RCV/h0K7N8f0MkWi7mE4KhMU=,iv:Cpn4q4v2di5GwN/Af1yNq8tda7eWeW9Ow00Hhx0euq4=,tag:XQaxSxlb8pT9O2HSvJengw==,type:str]
+    lastmodified: "2023-01-29T05:12:41Z"
+    mac: ENC[AES256_GCM,data:/iBuarJ9jszev8q2LMuxd0LlkNXCIyrcTDt0xJY3dXxMw4k52y3pYR0nnBbKHxcNqnbph7Bsi0AnsDP/AfpxVggxrOqv9zWAWHxBqFo+ilDs602rqgbUT55PsdOKwHVXZLYsa9gVUkFw3cJK/5iKV4KrK6lA9SkjM3QvuXLc5qc=,iv:tzOSNyt0feuu6vOCtC7tlROHPD+oloLa6ngwuwanLS4=,tag:AW2TtJo4HQL5HPAD5cqBMg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
