--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:np6xvIGXYonSrd1l2Iv8GAaQcoTW,iv:LveFiyjoOSmNc+0wem2Zf40tOIHXe2NqHPYtNOBCZes=,tag:57ZKUKYyH995aDM31GLo5w==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:1su6ynQ/V1wpQIiySjVqv0FonpxuNpZy9IBL8MU5GRoKsrO1QA==,iv:cgt9LCHW2LNXwZfkg3wb9XeD+aTdNZaXQZp+lPnIV7Y=,tag:i4ywVZBNwGxm04X/5aPS2w==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:Q+octD/fwEm+eBk=,iv:16VoD2d0dcD38b7iIwJwPkQh8jJohZb63rqg3m5uK4I=,tag:pOYTJ0ezzSv2hleVsFMioA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:6F3OI/c5nYuzjA+frEETC8oeokv3,iv:FH4qEj2H8DlW/sDTbON7NxCsvGVEvWR8CpAz67uHOEA=,tag:40phKnaS2umYigrwBOdtmg==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:sCKgKFbI+hAXi1cmCYJ9FGwuBXJhEOFrasQKY+QXsZoFjg/fcw==,iv:FzPsHCERL/1dc7pY+LeKurBd2+a1uycbjE34KB7AdA0=,tag:ySKIHx8q1AQPUVzblUgIIA==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:uUtoPe1TKLDHWi4=,iv:7jA/6NxBT03++PVVfXt3mrwXqHT3fLRBBXZAfiLpMTc=,tag:2iP3b85pbFvGLxdab1jauQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLbDcxSTJYV1BYYVpNNVg1
-            Q1ZOOFVkRHRLQklwdlVLcVlhVlltS3RhejA4CnFrbCtzWUhwdlk5WWdVMlFHV0h1
-            K1hyUno4V0JaN3Znb2VoVVltOGM4WFEKLS0tIEtzQ1JmTXY0Tmd6dnBSekNLUDFY
-            KzUwZFgzdFlxVCtoMW1rYkNyUVpFWkkKKKKxVJWWQwoF/Y3kA2VOgAZu9SVS29Da
-            gbtZ//yiMMaxb1/KK5AG8on7oJr9rvcDl4BARWCjfPOir+TpMtrEJw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtZ3RUY05hY1pwSUdURUU4
+            eUpjVE8zSWZ6b1AzTmtESGhuQmR6RjBlcm5rClJPSHQzMmpVWm00emdzN0s2NmlX
+            dDJGNXlzOWxMUzJCS2FRM3h5MzZwUzAKLS0tIGtZemdjWGdPS1BCUHZUVUlUcUpW
+            L0pUL1lCMHZyVjV0dm90R3VkdVIyRVEKuLm/mAiFtRH0d/zrYsE24QJRilGdQDTE
+            en9A6qfwe2KzpZ9mBqwWVnDnMvUuaQh6Vrfy3k/1xPU20+5YBuJYnA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T04:58:33Z"
-    mac: ENC[AES256_GCM,data:nY8CPbj1gqVVpk3BD55IvCp9wS18G4Q9TzX9c17sFBBU0kS1b59ExMcfB5uiA1XjopTtP/dWGpm2TSH0Hk7f5usaPMJMjAKYA9N7zRzYkw0oJpqPeOpizcjRQAyaThBMjus2h0OzXXite9GQl5Pt7hTqIwCiEtaW0u7/1AMMysQ=,iv:ksyhtFnXUbUMNlNOf95nicD3+ms9xGBmnUJ/JL2sKYU=,tag:EcPsFacRnvztH19BGZPw0Q==,type:str]
+    lastmodified: "2023-01-29T05:12:41Z"
+    mac: ENC[AES256_GCM,data:mJYPJTZWGQqi4Satv7P78u1gdR+pQqYw7hA4XqwE4/84/u9DeEzi0Yxza4zkTZjW4XXQD4BG+rdOkLQNGS6auzLZlxA99ZZgkU41Xp36EtAlgD/eZ0R+XBkPCIrGwxvZ4XJzN2MWfU51ZcYrpHlnaaU4LkZEB989tgjnvMcojgo=,iv:Souc/Kx62pdEwkRAWi5nL5z6o6IkOVloA0jcZtpX+ak=,tag:nHoRArQN7i49smWHldh+MQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
