--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,25 +4,25 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:vV0v0gNl1NO+JAU=,iv:vVQ8+mwQKUTh8obEb3n6sGF90BJREdycDt65LraGqZI=,tag:GVVN/dw9OxAL0uLrPiaAUg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:MPWb4eG2mL181L4jEa1czPIGMdKN,iv:AVLcWIuH2JectgWYyFfPnDluJNKIfTUMoR0pIz9oedg=,tag:jJfNa1rHoqMK0MPYvjFtOQ==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:k03DuqSxS82Cjkkp18T3h3Tc/Glw2WaxzCx/BurdH+pGZgJBdRrA7cr9x4AjVrQdA/8aNKuCqHr7D+Gsyect3fijww8YikI=,iv:f4t61+dTqLNkoQsYeZ8x5iYGMwA9lWq/84TbizPTqAw=,tag:6U83FKTZvHToftOLcsm14g==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:EeYpYxkLZZ4dolSGtgFyGIHadHSQWtMmIpxLJ2TX91ONPqQ=,iv:R1ABo79i3CzjHv1NSdQIfC8rXOvnQBCWw9t6Uc5OXUk=,tag:NiADVeW3sWKxbgP9Ht2aYQ==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:HLHxEvxoT/9/79NuLOgRg+SbyQ==,iv:ziazPxtzGu8vhHnCgpa4NWkYfOofYlSqz2nUc/3xLFE=,tag:29KOBD23bNzZskrTh6Ue8A==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:lelPZdyRV36OSTeTPTPefFcZg0ie,iv:d3wzcvDXkAMUTmLHlFJmsfsmADwBddAiKNoJMSunPLI=,tag:aGRPWEw6ofXCcgV/i8KTZg==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:mgPpSqiSfNk=,iv:eCSwRX5EP8Sy8RON+Fj6g6sb6AEkSGEWI7LbZK9CWzA=,tag:EDsFfcV4eODPM57rh3Jypg==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:AQcqVCg87yQ=,iv:CQOG44WldRBtuEMpbIKhsxJMFE4+ZiNwraDa7bb0UFE=,tag:uqB+07UKGQwc1c95lhN4lA==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:IaUKs4Fli/tPqFINRdmTHAQrlT9CsXO03x6tL88qdA43qIYtVPztKO0AxWkUrgSADSU8YwBx5BhjyOqcxKrD2Q==,iv:qcVHGpiKacUtoNciVCcK5AEhrYcg038R1q/ZetcEKs4=,tag:BVTZUH2BEqwMaepO7a/4+Q==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:Lz3KVUJAb46LNdpt5FnhvYa0H33NNsCAOUBqdQWaOgdRdPu6q6TIbCtUaHT0Gg3l7GjHrSADvow4umtUGTyEmg==,iv:nwFbm3bDO7K+nrDV51TOc6iUE02P5h6s33wOlLHMEqQ=,tag:iPpygjEV2xdxh6f3HGx0HQ==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:9P4i3ZDnzEvw,iv:Uir4eWlRNKtputdp097UGwSDMbK4qRhR+2nKO8GjqKk=,tag:6wv0pnxfP263rPbBhMGkFg==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:n3cbjBzxiFP2P7WN14ep,iv:0DsQaotdP7m4dF7eX5w51SicrqJZeAHV5ex6uAXIRa4=,tag:DIr4K3KwgHxydtyCp+M24Q==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:ys/0h07kD92uHxDs6IlwOP4+bmBd1iAvG74NvQvtMzVWkKuznTKjzMaXhz61yCZX8KE=,iv:+fIpbsFJESVz0igehKND4UxlfCJZBDifhH+80Q99P+Y=,tag:gqETmzFlV/oHCklxwwkSVQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:sWvLfx12z5nGN/Ogfvg=,iv:+mMSrfEgC/vNesa88im7gde51RxrWRoCe5jbF2Sopc4=,tag:yHtrwglSVswAVlGamPL9pg==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:rYyG/UkIigZkeghlbSMSfY82rLM=,iv:4XWENWvpdj5ppNdlYSsinIrRSsQOpOx2Pu+Hw8kxVP0=,tag:zRUSRjT5FD7iKUBn2AA7Rg==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:OU+25+7wy8c=,iv:0NEvTLxWCSP9vCrmAYHIMpYlGP/ucL8McPQoCy4i0wE=,tag:dnIXp0kXYWD2cyWIKNWEmA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:6tVhqlqhVlU4wFeZ,iv:kQ1ZdeIi+FHPR2teS/LQpC1aa1zBm3Jz1LxLFBwX1p0=,tag:9M/T9wSYqTTYBzuVPVlXtQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:bnGwJUC7KARh,iv:0nv/2y9CzHkqaJQlCqqUij7EszOFtab3sMALm4z3EtQ=,tag:NmV6iolzE6mV+kvNFbLdmg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:NL/k8dR+7LAY,iv:jFQH5lB9NDIcOTcwyIfRAgjEW7ICt696eGZaBibsDqE=,tag:HqczcjQkXK8rM4MknADzOA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:oiYNSqSzyVBKKrE=,iv:GkH36Rv7vjkPPBUVF1E/DuLQmtFeq1TqcmKEv8CG9ds=,tag:DyQiMg6FcsyPgWi1oeELqw==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:zBQZS5l06dIagbSzPKzsU4UFdDxP,iv:sloDkqeKJn+3CM4av+0vHAs49e7kMNSMiq3H+am3j9w=,tag:dB8Q7+upYeWc2llrtmSgWQ==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:uj/EzqcF8cgNPPj7DEcOFmQ0Y+fwjJeS0+407aF8RCrX/IK2AWgVuFuoRfspTp3C74KSplUSUv4T8ziPjcRE6dQvZ+eD+38=,iv:lDa8umisayNmkF5cVIM0s2i9Ep7aC9g7Ly2gVkg+DUI=,tag:DD1lGQRRjEwE4/AT+62OEQ==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:fskcyA/vfYOc2dNZzdqFdr7rzyQrurApYur/iPF1Ntsr9ow=,iv:MihZ7gv3TO7wcsVGSjYIFpNCjWBXDK7EAyQggcv+7QM=,tag:f6NC9Cyzv2cbzhci/rz1Og==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:zyE4MHb8QzL3TxC744xt5qxZ7w==,iv:BwHuQl1y62wHMIg6ku+fzkl09MOluFNjexZe5agJUCc=,tag:AfotW3Mpy+nzL7eq0RNZPw==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:NRWc0gQfQmxhO4fvG/syA69LQUUM,iv:CrsBMvdUst02PEP95LWlwp/8QHKSifRjWrZxrX1uMMA=,tag:AGdJai/JlufHqPXmfzOspw==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:yPxwT9pYZBY=,iv:+NSeO7fJDAPa8W/KZwOv5OCQP/X6ZB90r9qVvzBKIto=,tag:ac61bZkjvRi1rhDQ6Dwq1w==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:HuRkXf6tBF0=,iv:uGu3GRg3t+yorMB4FV6gCIErPetzQSk5+5AT+Zxs/ZY=,tag:6QvbKjCNtDSulCRlctI7jg==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:sSN6FCoDRCCGxrJDva++hHRMPyFeb2sbWNqlIOneYNCiOnyEgaYmtB7UwaEDrHChqRqzzRUF20XuM39hf9ijdQ==,iv:08Vpl5vunyBWTqRalgI1hlxg/BacdUhzUeubDA8qW2M=,tag:uEc4aRiuCiMsdr7RBvp0+Q==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:M1gMGKsYNNR2XMiIbpYrkSVbOhmJynEaXtoeQ9KnM+wTgobdUAnHDnw9moKsFL9Twpf7CKHDoOQ99sVensG3AA==,iv:3I+YNdusA+OW2mrPZJNmPvObGJKMr3bnHpqRieo4xP8=,tag:kOZjqV7YX5DWyqM3O1VcNQ==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:GBi6C4XjnVsm,iv:wPUOQoLp5LWoX6acvKp+AtOIa/Ks14Wg2aTvg15nXVM=,tag:cbIQWmZbbZBEl0Utmauclw==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:vKlV/KgcpJB6Ks3ZevKl,iv:7ox2tqNeOBZRnEm/SybERXILUVKDfB56yQdUUhKNVzY=,tag:Gfebpu/4AQhdASd2xnPeGA==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:vDh8xRe02alDG94vh2aIO19rbIMTnHBHZX/NbEpqEjEM2djL44F4r2y+uWI/YW64GDc=,iv:7SSdwE0fqOSZQJoSYSHl468Cd9k49UYVJeDXvPZxWv0=,tag:6EtNtxQq0Hs7ZMnR+iFpkQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:wxFUVVZuLfQ1KoNr7sc=,iv:kT0yuxwDVvD3meBGwcwOdbLrXigAYgfzFY7srmHc7OY=,tag:rDLvpFFpwu9nmVSdgkwhrQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:9mWIhVrTPbj4uVyg/O8o3lALdqs=,iv:6J23aXh6yQf7m7ZaIp4wOA/3g0Hy4bfcqR2ovrmlyxg=,tag:7nUXZJtEoQVy8KA3d2g3Ig==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:Ocf0H3e5lag=,iv:UXjdKZVv78D18lbb/fZFD3x5R3Eu6dnlYUAgWUSt7KU=,tag:PD6CmNRXoGzIZ9ii3H/N7g==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:4K15XGGO7UP0sio6,iv:9vraJQ0i277E3eXTIHTInzflRW88NE3+B1Fbcs4B5k8=,tag:vorFIFes0kAPlEbn10TrhQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:4m+1xasjYJIV,iv:ngmXHK6Gwe5MEhAxXwddXv//0/+RevexHwiabZJATHY=,tag:EVBaHk/9apMg0PQXlh493g==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:BXPGydKnEC89,iv:WmQd+7Pp0iBdQZwYZu5yWMet84FszMYpdQ89dRB4BeM=,tag:sBgoH/Wnjsj7vbxLXgK2EQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -32,14 +32,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTUXZuTFhySlpNTzMzeGwv
-            blc1OHgva0w1WmRjRGNSZ1B4K0JMc2pDNkRnCnErRk9qM250eGoyR1M3T1RKV2F4
-            TUJrSE8vUC9XdEMyS3g5eXlYRzlGcjAKLS0tIGQxZXo4Z21wMnJvem5IamR5dHRr
-            azM5dVl5aDVuc2RiYkV4V0dDODRLdTAKZHub+5LaLzCQm7MTXj0ipZe9RU1do/8L
-            nzoNljbyhF54fXtSJHNuM4yCImgXDG/c9tOw67WevaJpwuveuPlHXw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2djRabk5wbnN2dElVeDV1
+            T05qWktHc3BaTytVb3VCTDM4eUp2QTMwOVNVCk0rOStodWZrUzVPWjlJWnRrTEdH
+            TDhQM2NQRTNRRjdvNWl5WjNzYWprYlUKLS0tIGd2L0dyWnJjMTczRkplMkI4dXhC
+            QzFjbnEreXprMVg4bkdreDhvM2plc00KIH2HAu/tm7/0orNVc7s6JcqoPKo23VD6
+            xRsumQcG1T/p2dKSMJeuJHQTHqGc8QfbAVxekqvkFJqQd9tcv7XDDQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T04:58:33Z"
-    mac: ENC[AES256_GCM,data:lX4rhbh17dWdYea2Yk3q6CTDYnYv6RgLnruOC3v0JhMHG2EHENemfJ54tvguIz4svN1pyQPi0oZbVuZKxJZhtGJKrkZzodRRYSBulM2PAdQ91bUmri7P7Fev/GJTVj9PT0liBk1A5RaoyMiQpQZCWpNT38Q9e0tdfyidrgKvkwU=,iv:R+f7bZhuVxLTOe5kvQPDic5FElyJGt2QHbve2JEGSFk=,tag:ZixzBBu3O9ewrIBT0NFeOQ==,type:str]
+    lastmodified: "2023-01-29T05:12:41Z"
+    mac: ENC[AES256_GCM,data:aEeHgnY4Ll/M1ZrfnpkRyyzb0o1nrygWNdDDJSRh8I7VNQVcM8rqMsNOQO+1s98iCFl7G4ZckShGZ1uGGpqPrU2I6ON+EkNGgZp5qVnp9vp/JixdGThnIPqYa0L3+SVDcN5aMEZ0FMtcs2OJdX2gs8n04GgMa7kjh2gO+0J7uvs=,iv:ZYLvIMFpqE0/9+PJb8nDPQBymWUlKqHBSjYn5YNIvSQ=,tag:S2Q6Bcdl8qkVRZiV45dz/w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
